--- a/home/templates/home/contacts.html
+++ b/home/templates/home/contacts.html
@@ -23,7 +23,7 @@
     <div class="row">
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="#">Главная</a></li>
+                <li class="breadcrumb-item"><a href="/">Главная</a></li>
                 <li class="breadcrumb-item active" aria-current="page">Контакты</li>
             </ol>
         </nav>
