--- a/home/templates/home/news.html
+++ b/home/templates/home/news.html
@@ -20,7 +20,7 @@
     <div class="row">
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="#">Главная</a></li>
+                <li class="breadcrumb-item"><a href="/">Главная</a></li>
                 <li class="breadcrumb-item"><a href="#">Пресс центр</a></li>
                 <li class="breadcrumb-item active" aria-current="page">Новость</li>
             </ol>
