--- a/home/templates/home/newsList.html
+++ b/home/templates/home/newsList.html
@@ -19,7 +19,7 @@
     <div class="row">
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="#">Главная</a></li>
+                <li class="breadcrumb-item"><a href="/">Главная</a></li>
                 <li class="breadcrumb-item active"><a href="#">Пресс центр</a></li>
             </ol>
         </nav>
