--- a/home/templates/home/program.html
+++ b/home/templates/home/program.html
@@ -37,7 +37,7 @@
     </p>
     <div class="row align-items-center">
         <div class="col">
-            <a href="programsList.html" class="text-nowrap">
+            <a href="{% url 'programs' %}" class="text-nowrap">
                 <i class="bi bi-arrow-left"></i>
                 Назад к списку
             </a>
